@@ -152,6 +152,8 @@ SCIP_RETCODE doSepaCreate(
    (*sepa)->lpwasdelayed = FALSE;
    (*sepa)->solwasdelayed = FALSE;
    (*sepa)->initialized = FALSE;
+   (*sepa)->isparentsepa = FALSE;
+   (*sepa)->parentsepa = NULL;
 
    /* add parameters */
    (void) SCIPsnprintf(paramname, SCIP_MAXSTRLEN, "separating/%s/priority", name);
@@ -693,6 +695,27 @@ void SCIPsepaSetExitsol(
    sepa->sepaexitsol = sepaexitsol;
 }
 
+/** sets whether separator is a parent separator */
+void SCIPsepaSetIsParentsepa(
+   SCIP_SEPA*            sepa                /**< separator */
+   )
+{
+   assert(sepa != NULL);
+
+   sepa->isparentsepa = TRUE;
+}
+
+/** sets the parent separator */
+void SCIPsepaSetParentsepa(
+   SCIP_SEPA*            sepa,               /**< separator */
+   SCIP_SEPA*            parentsepa          /**< parent separator */
+   )
+{
+   assert(sepa != NULL);
+
+   sepa->parentsepa = parentsepa;
+}
+
 /** gets name of separator */
 const char* SCIPsepaGetName(
    SCIP_SEPA*            sepa                /**< separator */
@@ -958,4 +981,24 @@ SCIP_Bool SCIPsepaIsInitialized(
    assert(sepa != NULL);
 
    return sepa->initialized;
+}
+
+/** gets whether separator is a parent separator */
+SCIP_Bool SCIPsepaIsParentsepa(
+   SCIP_SEPA*            sepa                /**< separator */
+   )
+{
+   assert(sepa != NULL);
+
+   return sepa->isparentsepa;
+}
+
+/** gets parent separator (or NULL) */
+SCIP_SEPA* SCIPsepaGetParentsepa(
+   SCIP_SEPA*            sepa                /**< separator */
+   )
+{
+   assert(sepa != NULL);
+
+   return sepa->parentsepa;
 }
